# 版本及Git跟jCenter切換

--- a/signature-pad/build.gradle
+++ b/signature-pad/build.gradle
@@ -25,8 +25,8 @@ android {
 }
 
 bintray {
-    user = properties.getProperty("bintray.user")
-    key = properties.getProperty("bintray.apikey")
+    user = project.user
+    key = project.apikey
 
     configurations = ['archives']
     pkg {
